--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><!-- This is a comment! --> 
     <link rel="stylesheet" type="text/css" href="style.css"> 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cat Perry's Favorite Cats</title>
+  <title>Cat Perry's Favorite Cats</title>
 </head>
 <body>
     
